--- a/templates/accident-register.html
+++ b/templates/accident-register.html
@@ -554,18 +554,16 @@ function registerAccident() {
     .then(data => {
         console.log('서버 응답 데이터:', data);
         if (data.success) {
-            alert('사고가 성공적으로 등록되었습니다. 사고번호: ' + data.accident_number);
+            alert('사고가 성공적으로 등록되었습니다.');
             console.log('등록 성공! Console을 확인하세요.');
             
             // 팝업창 닫기
-            setTimeout(() => {
-                if (window.opener) {
-                    window.opener.location.reload();
-                    window.close();
-                } else {
-                    window.location.href = '/accident';
-                }
-            }, 1000);
+            if (window.opener) {
+                window.opener.location.reload();
+                window.close();
+            } else {
+                window.location.href = '/accident';
+            }
         } else {
             alert('등록 실패: ' + (data.message || '알 수 없는 오류'));
             console.error('등록 실패 상세:', data);
