--- a/templates/includes/attachment_section.html
+++ b/templates/includes/attachment_section.html
@@ -27,7 +27,7 @@
                         <div class="col-no">{{ loop.index }}</div>
                         <div class="col-file">
                             <span class="file-icon">📄</span>
-                            <a href="/download-attachment/{{ board_type }}/{{ attachment.id }}" class="file-link" download>{{ attachment.file_name }}</a>
+                            <a href="/download/{{ attachment.id }}" class="file-link" download>{{ attachment.file_name }}</a>
                             <span class="file-size">({{ (attachment.file_size / 1024) | round(2) }} KB)</span>
                         </div>
                         <div class="col-desc">
