fix: CKEditor 5 간단한 Classic Build로 재구현
- Classic Editor CDN 사용 (41.0.0 버전)
- 이미지 클립보드 붙여넣기 지원
- 표 복사-붙여넣기 지원
- 드래그 앤 드롭 지원
- 한글 UI 지원

--- a/templates/follow-sop-register.html
+++ b/templates/follow-sop-register.html
@@ -264,10 +264,11 @@
         </div>
         <div class="section-content">
             <div class="content-editor">
-                <!-- CKEditor textarea (안정 모드) -->
+                <!-- CKEditor 5 -->
                 <textarea id="detailed-content"
                           name="detailed_content"
                           class="editable-content"
+                          data-ckeditor="true"
                           placeholder="상세내용을 입력하세요."></textarea>
             </div>
         </div>
@@ -747,8 +748,8 @@ function openTableSearch(fieldKey) {
 {{ attachment_scripts() }}
 
 
-<!-- Content Editor 스크립트 추가 -->
-<script src="/static/js/content-editor.js"></script>
+<!-- CKEditor 스크립트 -->
+<script src="/static/js/ckeditor-simple.js"></script>
 
 <script>
 // 숫자 입력 유효성 검사 함수들
