--- a/templates/follow-sop-detail.html
+++ b/templates/follow-sop-detail.html
@@ -305,9 +305,10 @@
         </div>
         <div class="section-content">
             <div class="content-editor">
-                <!-- CKEditor textarea (안정 모드) -->
+                <!-- CKEditor 5 -->
                 <textarea id="detailed-content"
                           class="editable-content"
+                          data-ckeditor="true"
                           data-content="{{ (sop.detailed_content or '') | tojson }}"
                           placeholder="상세내용을 입력하세요."></textarea>
             </div>
@@ -997,8 +998,8 @@ function closeEditPasswordModal() {
 {{ attachment_styles() }}
 {{ attachment_scripts() }}
 
-<!-- Content Editor 스크립트 추가 -->
-<script src="/static/js/content-editor.js"></script>
+<!-- CKEditor 스크립트 -->
+<script src="/static/js/ckeditor-simple.js"></script>
 
 <script>
 // 숫자 입력 유효성 검사 함수들
