--- a/templates/change-request-register.html
+++ b/templates/change-request-register.html
@@ -803,6 +803,7 @@ if (typeof window !== 'undefined') {
 
 
 <!-- Content Editor 스크립트 추가 -->
-<script src="/static/js/content-editor.js"></script>
+<!-- CKEditor 스크립트 -->
+<script src="/static/js/ckeditor-simple.js"></script>
 
 {% endblock %}
